--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "antd-mobile",
-  "version": "1.1.2",
+  "name": "arabic-antd-mobile",
+  "version": "1.0.0",
   "description": "基于 React 的移动设计规范实现",
   "homepage": "http://mobile.ant.design",
   "keywords": [
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "http://github.com/ant-design/ant-design-mobile"
+    "url": "http://github.com/abusafa/arabic-antd-mobile"
   },
   "bugs": {
     "url": "http://github.com/ant-design/ant-design-mobile/issues"
