--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "arabic-antd-mobile",
+  "name": "rtl-antd-mobile",
   "version": "1.0.0",
   "description": "基于 React 的移动设计规范实现",
   "homepage": "http://mobile.ant.design",
